--- a/Calculadora.html
+++ b/Calculadora.html
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="calculadora.css">
-    <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
+    
+
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
     <center><h1>Calculadora</h1></center>
