--- a/Viajes.html
+++ b/Viajes.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="Viajes2.css">
     <link href="https://fonts.googleapis.com/css?family=B612" rel="stylesheet">
 </head>
@@ -14,7 +15,7 @@
         <img src="img/logo.png" alt="logotipo" width="65%" >
     </header>
     
-    <div class="barra">
+    <div class="barra" id="barra">
         <a href="#nav" class="mobileMenu">
             <i class="fas fa-ellipsis-v"></i>
         </a>
