--- a/Viajes.html
+++ b/Viajes.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="Viajes2.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/Viajes2.css">
     <link href="https://fonts.googleapis.com/css?family=B612" rel="stylesheet">
 </head>
 <body>
@@ -102,7 +102,7 @@
         </div>
         <p class="copyright">BlogdeViajes - Todos los derechos reservados 2019 &copy;</p>
     </footer>
-    <script src="Viajes.js"></script>
+    <script src="js/Viajes.js"></script>
 
 
 </body>
