--- a/Calculadora.html
+++ b/Calculadora.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="calculadora.css">
+    <link rel="stylesheet" href="css/calculadora2.css">
     
 
 
@@ -39,8 +39,10 @@
             <li class="signo">/</li>
         </ul>
 
-        <div id="borrar">BORRAR</div>
+        <div id="borrar" onclick="metCal.borrar()">BORRAR</div>
     </div>
+
+    <script src="js/calculadora.js"></script>
 
  
 </body>
